tests/errors/implicit_sign_conversion.rsg
// TEST: compile_error
// EXPECT-ERROR: type mismatch
module test_err

fn main() {
    var x: i32 = 42
    var y: u32 = x
}
